2002-04-15  John Wiegley  <johnw@gnu.org>

	* Created this file.